--- a/webapp/src/style.css
+++ b/webapp/src/style.css
@@ -3,3 +3,6 @@
 
 /* import the default theme (optional) */
 @import "@vue-flow/core/dist/theme-default.css";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
