--- a/webapp/src/style.css
+++ b/webapp/src/style.css
@@ -6,3 +6,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer utilities {
+  .anchor {
+    visibility: collapse;
+    @apply relative;
+  }
+
+  .anchor > * {
+    visibility: visible;
+  }
+}
